<resources>
    <string name="app_name">RemindApp</string>
    <string name="action_dark_mode">Dark Mode</string>
    <string name="action_libraries">Open Source Libraries</string>

    <string name="menu_item_daily">Daily</string>
    <string name="menu_item_weekly">Weekly</string>
    <string name="menu_item_monthly">Monthly</string>
    <string name="menu_item_yearly">Yearly</string>
    <string name="menu_label">Choose a Repeat Type</string>

    <string name="add_reminder_every_word">Every</string>
    <string name="add_daily_reminder_day">Days</string>
    <string name="add_weekly_reminder_week">Weeks</string>
    <string name="add_monthly_reminder_month">Months</string>
    <string name="add_yearly_reminder_year">Years</string>

    <string name="add_daily_reminder_dialog_tag">Daily Reminder</string>
    <string name="add_weekly_reminder_dialog_tag">Weekly Reminder</string>
    <string name="add_monthly_reminder_dialog_tag">Monthly Reminder</string>
    <string name="add_yearly_reminder_dialog_tag">Yearly Reminder</string>

    <string name="add_reminder_default_number">1</string>
    <string name="add_reminder_common_variables_event_name">Event Name</string>
    <string name="add_reminder_common_variables_notification_message">Notification Message</string>
    <string name="add_reminder_common_variables_starting_date">Current Date</string>
    <string name="add_reminder_common_variables_end_date">End Date (Infinity)</string>
    <string name="add_reminder_common_variables_clock">Current Time</string>

    <string name="reminder_item_event_name">Event Name</string>
    <string name="reminder_item_notification_message">Notification Message</string>
    <string name="reminder_item_starting_date">Starting Date</string>
    <string name="reminder_item_end_date">End Date</string>
    <string name="reminder_item_clock">Time</string>
    <string name="reminder_item_frequency_value">Frequency Value</string>

    <string name="add_reminder_common_buttons_save_button">Save</string>
    <string name="add_reminder_common_buttons_cancel_button">Cancel</string>

    <string name="time_prefix">Time: </string>
    <string name="date_prefix">Date: </string>

    <string name="weekly_reminder_day_buttons_monday">MON</string>
    <string name="weekly_reminder_day_buttons_tuesday">TUE</string>
    <string name="weekly_reminder_day_buttons_wednesday">WED</string>
    <string name="weekly_reminder_day_buttons_thursday">THU</string>
    <string name="weekly_reminder_day_buttons_friday">FRI</string>
    <string name="weekly_reminder_day_buttons_saturday">SAT</string>
    <string name="weekly_reminder_day_buttons_sunday">SUN</string>
    
    <string name="contextual_action_mode_edit">Edit</string>
    <string name="contextual_action_mode_delete">Delete</string>

    <string name="no_event_include_text">No Active Habits</string>

    <!--Content Description-->
    <string name="back_btn">Back</string>

</resources>
