<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/reminder_item_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reminder_item_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_item_event_name"/>

        <TextView
            android:id="@+id/reminder_item_notification_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reminder_item_notification_message"/>

        <TextView
            android:id="@+id/reminder_item_starting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reminder_item_starting_date"/>

        <TextView
            android:id="@+id/reminder_item_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reminder_item_end_date"/>

        <TextView
            android:id="@+id/reminder_item_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reminder_item_clock"/>

        <TextView
            android:id="@+id/reminder_item_frequency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reminder_item_frequency_value"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>