<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorLight"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainColor"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/famMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="@color/floatingActionButtonsShadowColor"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="0dp"
        fab:menu_shadowYOffset="2dp"
        fab:menu_colorNormal="@color/mainColor"
        fab:menu_colorPressed="@color/mainColorDarker"
        fab:menu_colorRipple="@color/mainColorLighter"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/add_24dp_white"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="false"
        fab:menu_labels_singleLine="true"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_fab_label="@string/menu_label"
        fab:menu_fab_show_animation="@anim/show_anim"
        fab:menu_fab_hide_animation="@anim/hide_anim">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ac_unit_black_24dp"
            fab:fab_showShadow="true"
            fab:fab_shadowColor="@color/floatingActionButtonsShadowColor"
            fab:fab_shadowRadius="4dp"
            fab:fab_shadowXOffset="0dp"
            fab:fab_shadowYOffset="2dp"
            fab:fab_size="normal"
            fab:fab_label="@string/menu_item_daily" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ac_unit_black_24dp"
            fab:fab_showShadow="true"
            fab:fab_shadowColor="@color/floatingActionButtonsShadowColor"
            fab:fab_shadowRadius="4dp"
            fab:fab_shadowXOffset="0dp"
            fab:fab_shadowYOffset="2dp"
            fab:fab_size="normal"
            fab:fab_label="@string/menu_item_weekly" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ac_unit_black_24dp"
            fab:fab_showShadow="true"
            fab:fab_shadowColor="@color/floatingActionButtonsShadowColor"
            fab:fab_shadowRadius="4dp"
            fab:fab_shadowXOffset="0dp"
            fab:fab_shadowYOffset="2dp"
            fab:fab_size="normal"
            fab:fab_label="@string/menu_item_monthly" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ac_unit_black_24dp"
            fab:fab_showShadow="true"
            fab:fab_shadowColor="@color/floatingActionButtonsShadowColor"
            fab:fab_shadowRadius="4dp"
            fab:fab_shadowXOffset="0dp"
            fab:fab_shadowYOffset="2dp"
            fab:fab_size="normal"
            fab:fab_label="@string/menu_item_yearly" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>