<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/cardViewColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/add_yearly_reminder_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/add_yearly_reminder_dialog_tag"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="?attr/primaryTextColor"/>

        <include
            android:id="@+id/add_yearly_reminder_common_variables_include"
            layout="@layout/add_reminder_common_variables" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/add_yearly_reminder_every_word_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="11dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_reminder_every_word"
                android:textColor="?attr/primaryTextColor"
                android:textSize="14sp"
                android:labelFor="@id/add_yearly_reminder_how_many_days_et"
                app:layout_constraintBottom_toBottomOf="@+id/add_yearly_reminder_how_many_days_et"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/add_yearly_reminder_how_many_days_et"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/add_reminder_default_number"
                android:textAlignment="center"
                android:textColor="?attr/primaryTextColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_yearly_reminder_every_word_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_yearly_reminder_days_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="11dp"
                android:text="@string/add_yearly_reminder_year"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="?attr/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="@+id/add_yearly_reminder_how_many_days_et"
                app:layout_constraintStart_toEndOf="@+id/add_yearly_reminder_how_many_days_et"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/add_yearly_reminder_common_buttons_include"
            layout="@layout/add_reminder_common_buttons" />

    </LinearLayout>

</ScrollView>